# mcp-server-mysql

./: .gitignore  README.md  pyproject.toml
src/mcp-server-mysql/: server.py
src/mcp_server_mysql/: __init__.py  server.py
